# slim-agent

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CHANGELOG.md.bak  CREDITS.md  LICENSE  README.md  README.md.bak  SKILL.md  SKILL.md.bak  pyproject.toml  pyproject.toml.bak
.github/workflows/: publish.yml
schema/: pointer_memory.schema.json
src/slim_agent/: __init__.py  __init__.py.bak  cli.py
src/slim_agent/dream_cycle/: __init__.py  cycle.py
src/slim_agent/eval_framework/: __init__.py  evaluator.py
src/slim_agent/gap_analysis/: __init__.py  analyzer.py
src/slim_agent/pointer_memory/: __init__.py  models.py  store.py
src/slim_agent/problem_solving/: __init__.py  core.py
src/slim_agent/reflection_pool/: __init__.py  models.py  pool.py
src/slim_agent/retrieval_reflex/: __init__.py  reflex.py
src/slim_agent/skill_manager/: __init__.py  manager.py  models.py
src/slim_agent/slim_reducer/: __init__.py  bm25.py  loop_detector.py  models.py  reducer.py  registry.py  rrf.py  simhash.py
src/slim_agent/url_fetcher/: __init__.py  fetcher.py  health.py
src/slim_agent/versioned_reflection/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_pointer_memory.py  test_q3_q4.py  test_real_world.py  test_reflection_pool.py  test_simhash.py  test_skill_manager.py  test_slim_reducer.py  test_url_fetcher.py
