[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slim-agent"
version = "0.1.0"
description = "Self-Learning Index Memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SLIM-Agent Authors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "grapheme>=0.6.0",
    "wcwidth>=0.2.0",
]

[project.scripts]
slim = "slim_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/slim_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "pyproject.toml", "SKILL.md", "README.md"]